# dandy

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  dandy.h  genindex.html  index.html  make_vs.bat  objects.inv  search.html  searchindex.js  test.cpp
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/pages/: api.rst.txt  basics.rst.txt  components.rst.txt  disable_names.rst.txt
docs/: Doxyfile.in  conf.py  index.rst
docs/pages/: api.rst  basics.rst  conversions.rst  disable_names.rst  disable_prefabs.rst  getting_started.rst  type_traits.rst
include/dandy/: dandy.h
pages/: api.html  basics.html  components.html  conversions.html  disable_names.html  getting_started.html  type_traits.html
tests/: CMakeLists.txt  common.h  comparisons.cpp  constructors.cpp  conversions.cpp  expressions.cpp  main.cpp  math.cpp  serialization.cpp  traits.cpp  unordered_key.cpp
